<resources>
    <string name="app_name">Ariadna</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Project "Ariadna"</string>
    <string name="nav_header_subtitle">Line Follower</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_tests">Tests</string>
    <string name="button_run">Run</string>
    <string name="button_stop">Stop</string>
    <string name="menu_config">Configurations</string>
    <string name="option_max_speed">Max Speed</string>
    <string name="option_base_speed">Base Speed (0&#8211;255)</string>
    <string name="button_load">Load</string>
    <string name="button_save">Save</string>
    <string name="option_loop_frequency">Loop Frequency (ms)</string>
    <string name="option_kp">Kp</string>
    <string name="option_kd">Kd</string>
    <string name="hint_loop_frequency">10</string>
    <string name="hint_base_speed">100</string>
    <string name="hint_kp">1</string>
    <string name="hint_kd">0</string>
    <string name="option_sensors">Sensors</string>
    <string name="option_sensor_1_weight">Sensor 1 Weight</string>
    <string name="hint_sensor_1_weight">-40</string>
    <string name="option_sensor_2_weight">Sensor 2 Weight</string>
    <string name="hint_sensor_2_weight">-30</string>
    <string name="option_sensor_3_weight">Sensor 3 Weight</string>
    <string name="hint_sensor_3_weight">-20</string>
    <string name="option_sensor_4_weight">Sensor 4 Weight</string>
    <string name="hint_sensor_4_weight">-10</string>
    <string name="option_sensor_5_weight">Sensor 5 Weight</string>
    <string name="hint_sensor_5_weight">10</string>
    <string name="option_sensor_6_weight">Sensor 6 Weight</string>
    <string name="hint_sensor_6_weight">20</string>
    <string name="option_sensor_7_weight">Sensor 7 Weight</string>
    <string name="hint_sensor_7_weight">30</string>
    <string name="option_sensor_8_weight">Sensor 8 Weight</string>
    <string name="hint_sensor_8_weight">40</string>
    <string name="option_off_the_line_error_weight">Off The Line Error Weight</string>
    <string name="hint_off_the_line_error_weight">50</string>
    <string name="option_off_the_line_temporary_factor">Off The Line Temporary Factor</string>
    <string name="hint_off_the_line_temporary_factor">0.5</string>
    <string name="button_bluetooth">Bluetooth</string>
    <string name="button_battery">Battery</string>
    <string name="button_motors">Motors</string>
    <string name="button_sensors">Sensors</string>
    <string name="button_test">Test</string>
    <string name="test_result">Result</string>
    <string name="sensor_1">Sensor 1</string>
    <string name="sensor_2">Sensor 2</string>
    <string name="sensor_3">Sensor 3</string>
    <string name="sensor_4">Sensor 4</string>
    <string name="sensor_5">Sensor 5</string>
    <string name="sensor_6">Sensor 6</string>
    <string name="sensor_7">Sensor 7</string>
    <string name="sensor_8">Sensor 8</string>
    <string name="button_send">Send</string>
    <string name="edit_text_send_hint">Text</string>
    <string name="not_connected">Not Connected</string>
    <string name="button_refresh_paired_devices">Refresh paired devices</string>
    <string name="paired_devices">Paired Devices</string>
    <string name="connecting">Connecting &#8230;</string>
    <string name="battery_level">Battery Level</string>
    <string name="sensors_value">Sensors Value</string>
    <string name="button_refresh">Refresh</string>
    <string name="configurations">Configurations</string>
    <string name="connected">Connected</string>
</resources>
