<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <FrameLayout
        android:id="@+id/fragment_test_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4" />


    <Button
        android:id="@+id/ButtonBluetoothTest"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/button_bluetooth"
        android:textSize="20sp" />

    <Button
        android:id="@+id/ButtonBatteryTest"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/button_battery"
        android:textSize="20sp" />

    <Button
        android:id="@+id/ButtonMotorsTests"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/button_motors"
        android:textSize="20sp" />

    <Button
        android:id="@+id/ButtonSensorsTest"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/button_sensors"
        android:textSize="20sp" />

</LinearLayout>


